Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118777

Emulation layer crash / cannot run project after adding two Audio Listeners

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.4, 6.6.2, 6.7.0 FF
    • 6.4.1, dev
    • Multimedia
    • None
    • d901e462e (dev), 381b9e3ae (6.6), c2672fe54 (tqtc/lts-6.5)

    Description

      Steps:

      • Create/open a 3D project
      • Add QtQuick3D.SpatialAudio module
      • Add two Audio Listener components from Components to scene in Navigator
      • -> emulation layer crash in 2D/3D
      • -> Cannot run project. Application output:
      08:57:18: Starting C:\Users\taremes\RTA\QtDesignStudio_4.0.0\Tools\QtDesignStudio-4.0.0-preview\qt6_design_studio_reduced_version\bin\qml2puppet-4.0.0.exe --qml-runtime -I C:/Users/taremes/Documents/UntitledProject117/imports -I C:/Users/taremes/Documents/UntitledProject117/asset_imports --apptype widget C:/Users/taremes/Documents/UntitledProject117/content/App.qml...
      QML debugging is enabled. Only use this in a safe environment.
      Info: Starting QML Runtime ((null):0, (null))
      NVD3DREL: GR-805 : DX9 Overlay is DISABLED
      Warning: QThread::setPriority: Cannot set priority, thread is not running ((null):0, (null))
      Warning: Ignoring attempt to add a second listener to the spatial audio engine. ((null):0, (null))
      Warning: Failed to setup resampler ((null):0, (null))
      08:57:21: C:\Users\taremes\RTA\QtDesignStudio_4.0.0\Tools\QtDesignStudio-4.0.0-preview\qt6_design_studio_reduced_version\bin\qml2puppet-4.0.0.exe crashed. 

       

      • Tried also if it's possible to have two scenes in two different view3Ds and then add one audio listener to each, but same crash occurred in that scenario

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-118777
          # Subject Branch Project Status CR V

          Activity

            People

              lars.sutterud Lars Sutterud
              tanja_remes Tanja Remes
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes